--- a/quiz-app/index.html
+++ b/quiz-app/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="styles.css" <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quizapp</title>
+    <title>Quiz App</title>
 
     <div>
       <img
@@ -12,8 +12,20 @@
     </div>
   </head>
 
-  <h1>some text</h1>
-  <div class="info"></div>
+  <h1>Quiz app</h1>
+
+  <div class="info">
+    What are the earliest cephalopods found in the fossil record ?
+    <div class="bookmark">
+      <img class="bookmarkicon" alt="" src="assets/bookmark.svg" />
+    </div>
+    <div class="answer">Show answer</div>
+    <div class="tag">Nautilus</div>
+    <div class="tag">Squids</div>
+    <div class="tag">Octopuses</div>
+    <div class="tag">Ammonites</div>
+  </div>
+
   <div class="info"></div>
   <div class="info"></div>
   <div class="info"></div>
@@ -21,6 +33,15 @@
   <div class="info"></div>
 
   <body></body>
+
+  <footer>
+    <nav>
+      <div>
+        <img src="assets/house.svg" alt="Back to home button" />
+        <img src="assets/circle-user-round.svg" alt="user button" />
+      </div>
+    </nav>
+  </footer>
 </html>
 
 <!--
