--- a/quiz-app/index.html
+++ b/quiz-app/index.html
@@ -37,8 +37,10 @@
   <footer>
     <nav>
       <div>
-        <img src="assets/house.svg" alt="Back to home button" />
-        <img src="assets/circle-user-round.svg" alt="user button" />
+        <a> <img src="assets/house.svg" alt="Back to home button" /></a>
+        <a>
+          <img src="assets/circle-user-round.svg" alt="user button" />
+        </a>
       </div>
     </nav>
   </footer>
