--- a/quiz-app/index.html
+++ b/quiz-app/index.html
@@ -27,10 +27,10 @@
     <span class="answer">Show answer</span>
 
     <div class="tagcontainer">
-      <span class="tag">Nautilus</span>
-      <span class="tag">Squids</span>
-      <span class="tag">Octopuses</span>
-      <span class="tag">Ammonites</span>
+      <span class="tag"><p>Nautilus</p></span>
+      <span class="tag"><p>Squids</p></span>
+      <span class="tag"><p>Octopuses</p></span>
+      <span class="tag"><p>Ammonites</p></span>
     </div>
   </div>
 
@@ -45,6 +45,7 @@
   <footer>
     <nav class="navigation">
       <a> <img src="assets/house.svg" alt="Back to home button" /></a>
+      <a><img src="assets/bookmark.svg" /></a>
       <a>
         <img src="assets/circle-user-round.svg" alt="user button" />
       </a>
